# TransformLanguage

./: CMakeLists.txt  README.md  build.gradle  compile_plugin.bat  compile_plugin.sh  gradlew  settings.gradle  更新.md
.github/workflows/: build.yml
examples/: my_plugin.cpp
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: native_bridge.cpp  tfl.h
src/main/java/org/transformLanguage/: Commands.java  CppCommand.java  NativeBridge.java  TransformLanguage.java
src/main/java/org/transformLanguage/Cpp/Command_Bridge/: Cpp_tool.java
src/main/java/org/transformLanguage/JNI/: NativeBridge.java
src/main/resources/: paper-plugin.yml
